# credit-mini

./: .gitignore  README.md  create_derecho_env.sh  environment.yml  environment_cpu.yml  environment_gpu.yml  pyproject.toml  requirements.txt  ruff.toml  ruff_summary.txt
applications/: LES_pred.py  LES_train.py  WRF_pred_clim.py  WRF_pred_metrics.py  WRF_train.py  WRF_train_multi.py  calc_global_solar.py  config_visualization_example.yml  diag_pred_metrics.py  diag_train.py  dscale_pred_metrics.py  dscale_train.py  model_summary.py  predict_cpu.py  rollout_metrics.py  rollout_realtime.py  rollout_to_netcdf.py  rollout_to_netcdf_new.py  scaler.py  train.py  train404.py
applications/deprecated/: train.py  train_multistep.py
config/: README.md  crossformer.yml  crossformer_6hr.yml  example_for_data_checks.yml  fuxi_baseline_1h.yml  fuxi_baseline_6h.yml  swin.yml  unet.yml  wxformer_6h.yml
credit/: data.py  distributed.py  forecast.py  loss.py  metrics.py  mixed_precision.py  output.py  pbs.py  pe.py  postblock.py  scheduler.py  solar.py  trainer_new.py  transforms.py  visualization_tools.py
credit/datasets/: __init__.py  diag_singlestep.py  dscale_singlestep.py  era5_multistep.py  era5_multistep_batcher.py  era5_singlestep.py  les_singlestep.py  load_dataset_and_dataloader.py  realtime_predict.py  sequential_multistep.py  trainer_diag.py  wrf_multistep.py  wrf_singlestep.py
credit/losses/: __init__.py  almost_fair_crps.py  base_losses.py  kcrps.py  les_loss.py  logcosh.py  msle.py  power.py  spectral.py  weighted_loss.py  xsigmoid.py  xtanh.py
credit/metadata/: era5.yaml  era5_old.yaml
credit/models/: __init__.py  base_model.py  checkpoint.py  crossformer.py  crossformer_diffusion.py  crossformer_ensemble.py  debugger_model.py  dscale_wrf.py  fuxi.py  graph.py  reset.py  swin.py  swin_wrf.py  unet.py  unet404.py  unet_attention_modules.py  unet_diffusion.py
credit/trainers/: __init__.py  base_trainer.py  ic_optimization.py  trainer404.py  trainerDiag.py  trainerDscale.py  trainerERA5.py  trainerERA5_Diffusion.py  trainerERA5_ensemble.py  trainerLES.py  trainerWRF.py  trainerWRF_multi.py  utils.py
credit/trainers/deprecated/: trainerERA5_multistep_concat.py  trainerERA5_multistep_sum.py  trainerERA5_multistep_v1.py  trainerERA5_v1.py  trainerERA5_v2.py  trainer_multistep_deprecated.py
credit/transforms/: __init__.py  transforms_diag.py  transforms_dscale.py  transforms_global.py  transforms_les.py  transforms_quantile.py  transforms_wrf.py
credit/transforms/deprecated/: _transforms.py
